Project 2 Report.txt
Project 2 Report

Julie Reyes
Shukri Muhidin

Sources: 

c++ - How do I manually enter in a Matrix of data? - Stack Overflow
Pointer to an Array in C++ | GeeksforGeeks

C++ Arrays | GeeksforGeeks
How to Print an Array in C++? | GeeksforGeeks
https://www.geeksforgeeks.org/cpp-program-to-implement-queue-using-array/ 

* asked chatGPT to explain C++ concepts and how to implement them 

There was trouble implementing dijkstras with knowing how it is able to know the shortest path between two vertices. At first, it was counting each edge that was connected to the same vertice. This did not follow the correct algorithm implementation as it will only continue to the edge with the shortest amount of distance. Then it was found out that for an unweighted graph, dijkstras can be implemented with BFS. This made it more simple to understand. 

Bug: 

There was a typo in the Vertex class 

Vertex.cpp:9:18: error: ‘class Vertex’ has no member named ‘Index’; did you mean ‘index’?
    9 |     return this->Index;
      |                  ^~~~~
      |                  index

Solution: change this->Index to lower case i for Index 
 
Design Decisions: 

A graph class was created to keep track of the adjacency matrix. Then that was used to determine the odd vertices and the shortest path. Dijkstras was implemented with a queue class. It would enqueue the start node, then mark it as visited and set the distance to 0. It would then dequeue that value to check all of its edges. If that edge has not been visited, then it will set it to visited, set the distance of that node from the start node by adding it with the distance of the dequeued value. It will then enqueue all of the edges of the dequeued value and repeat. 











